assets/css/style.css
/* ... */
.blog-inner-con::before{
    content: "";
    width: 35px;
    height: 38px;
    position: absolute;
    bottom: 26px;
    left: -116px;
    background: url(../image/triangle-icon.png) no-repeat top left;
    animation: mover 1s infinite alternate;
    -webkit-animation: mover 1s infinite alternate;
}
.blog-inner-con h2{
    color: var(--primary-color);
}
.blog-con:after{
    content: "";
    width: 127px;
    height: 404px;
    position: absolute;
    top: 207px;
    right: -6px;
    background: url(../image/circle-bg-img.png) no-repeat top right;
    animation: left-mover 1s infinite alternate;
    -webkit-animation: left-mover 1s infinite alternate;
}
.blog-con::before {
    content: "";
    width: 52px;
    height: 59px;
    position: absolute;
    top: 154px;
    right: 72px;
    background: url(../image/half-circle-right-icon.png) no-repeat top left;
    animation: mover 1s infinite alternate;
    -webkit-animation: mover 1s infinite alternate;
}
/******blog section****/
/******form section******/
.form-main-con{
    overflow: hidden;
}
.form-main-inner-con h2{
    color: var(--primary-color);
}
.contact-information{
    background: var(--light-purple-color);
    border-radius: 28px;
    padding: 70px 40px 50px;
}
.contact-information li figure{
    width: 60px;
    height: 60px;
    background: var(--accent);
    border-radius: 50%;
    position: absolute;
}
.contact-information-content {
    margin-left: 76px;
}
.contact-information-content h5{
    font-size: 20px;
    color: var(--white-color);
    font-weight: 600;
    margin-bottom: 4px;
}
.contact-information-content p{
    font-size: 16px;
    line-height: 22px;
    color: var(--white-color);
    font-family: 'Lato', sans-serif;
}
.contact-information ul li{
    margin-bottom: 32px;
}
.contact-information ul li img{
    transition-duration: .3s;
    transition-property: transform;
    transition-timing-function: ease-out;
}
.contact-information ul li:hover img{
    transform: translateY(-8px);
}
.contact-form input,
.contact-form textarea{
    background: #fefeff;
    border: none;
    box-shadow: 0 0 85px 0 #e9eefc;
    font-size: 16px;
    color: var(--text-color);
    padding: 17px 30px;
    border-radius: 30px;
    width: 100%;
    font-family: 'Lato', sans-serif;
    margin-bottom: 23px;
}
.contact-form input::placeholder,
.contact-form textarea::placeholder{
    color: var(--text-color);
    font-size: 16px;
    font-family: 'Lato', sans-serif;
}
.contact-form input:focus,
.contact-form textarea:focus{
    outline: 1px solid #6f34fe;
    box-shadow: 0 0 85px 0 #d9e3ff;
}
.contact-form textarea{
    height: 148px;
    resize: none;
    margin-bottom: 29px;
}
.contact-form button{
    border: none;
    padding: 19px 64px 18px;
    background: var(--accent);
    color: var(--white-color);
    font-size: 20px;
    line-height: 22px;
    border-radius: 36px;
    cursor: pointer;
    box-shadow: 0 0 85px 0 #e9eefc;
    transition-duration: .3s;
    transition-property: transform;
    transition-timing-function: ease-out;
    border: 1px solid transparent;
}
.contact-form button:hover{
    border-color: var(--light-purple-color);
    background: var(--light-purple-color);
    transform: translateY(-8px);
}
.form-main-inner-con:after{
    content: "";
    width: 35px;
    height: 38px;
    position: absolute;
    bottom: 140px;
    right: -116px;
    background: url(../image/corn-left-icon.png) no-repeat top left;
    animation: mover 1s infinite alternate;
    -webkit-animation: mover 1s infinite alternate;
}
/******form section******/
/******footer section*******/
.weight-footer-con{
    padding-top: 68px;
    padding-bottom: 20px;
    background: #211e39;
}
.footer-navbar ul li{
    padding: 0 18px;
    border-left: 2px solid #4f4b73;
    line-height: 18px;
}
.footer-navbar ul li a{
    text-decoration: none;
    color: #9692b0;
    font-family: 'Lato', sans-serif;
    position: relative;
}
.footer-navbar ul li a:hover{
    color: var(--accent);
}
.weight-footer-content figure{
    margin-bottom: 38px;
}
.footer-social-icon ul li a {
    text-decoration: none;
}
.footer-social-icon ul li a i{
    background: var(--white-color);
    width: 45px;
    height: 45px;
    border-radius: 50%;
    font-size: 20px;
    color: #255afc;
    transition-duration: .3s;
    transition-property: transform;
    transition-timing-function: ease-out;
}
.footer-social-icon ul li a i:hover{
    color: var(--white-color);
    background-color:#255afc ;
    transform: translateY(-8px);
}
.footer-social-icon ul li:nth-child(2) a i{
    color: #f33a7e;
    margin-left: 11px;
    margin-right: 11px;
}
.footer-social-icon ul li:nth-child(2) a i:hover{
    background: #f33a7e;
    color: var(--white-color);
    transform: translateY(-8px);
}
.footer-social-icon ul li:last-child a i{
    color: #1d74b1;
}
.footer-social-icon ul li:last-child a i:hover{
    color: var(--white-color);
    background: #1d74b1;
    transform: translateY(-8px);
}
.footer-social-icon ul li:nth-child(4) a i:hover{
    background: #1dbf73 !important;
    color: var(--white-color);
    transform: translateY(-8px);
}
.footer-navbar ul{
    margin-bottom: 36px;
}
.footer-social-icon{
    margin-bottom: 70px;
}
.copy-right-content{
    border-top: 1px solid #38354d;
}
.copy-right-content p{
    font-size: 14px;
    color: #9692b0;
    padding-top: 26px;
    font-family: 'Lato', sans-serif;
}
.weight-footer-con::before{
    content: "";
    width: 286px;
    height: 288px;
    position: absolute;
    top: 0;
    left: 0;
    background: url(../image/footer-left-dotted-img.png) no-repeat top left;
}
.weight-footer-con:after{
    content: "";
    width: 286px;
    height: 288px;
    position: absolute;
    bottom: 0;
    right: 0;
    background: url(../image/footer-dotted-right-img.png) no-repeat top right;
}
/******footer section*******/
/**** tastimonials section****/
.tastimonials-con{
    overflow: hidden;
}
/* ... */

